# arvind-yadav-multi-state

./: .dockerignore  .gitignore  .hadolint.yaml  .trivyignore  CLAUDE.md  Dockerfile  Dockerfile.prebuilt  GITOPS.md  Makefile  PR_DESCRIPTION.md  PR_DESCRIPTION_W5D4.md  README.md  build.gradle  compose.override.yaml  compose.profiles.yaml  compose.yaml  env.ci.json  env.json.example  mcp.json  settings.gradle  template.yaml
.github/: PIPELINE.md  dependabot.yml
.github/actions/setup-build/: action.yml
.github/k8s/: ci-backing-services.yaml
.github/workflows/: _build-and-push.yml  _bump-config.yml  cfn-validate.yml  ci.yml  compose-ci.yml  deploy-prod.yml  docker.yml  k8s-ci.yml  load.yml  multistate_agent_svc-ci.yml  multistate_mcp_server-ci.yml  observability.yml  python-ci.yml  serverless.yml  web-ci.yml
.grafana/dashboards/: multistate-api-red.json
cfn/: .cfnlintrc  multistate-app-dev.yaml  multistate-artifacts-dev.yaml  multistate-bootstrap-dev.yaml  multistate-cost-dev.yaml  multistate-network-dev.yaml  multistate-observability-dev.yaml
db/: README.md  V1__schema.sql  V2__seed.sql  V3__event_outbox.sql  verify.sql
db/queries/: README.md  cte.sql  group_by_having.sql  joins.sql  window.sql
docker/: SECURITY.md  SIZE.md
docker/healthcheck/: go.mod  main.go
docker/otel/: fetch-agent.sh
envs/: application-compose.yml  multistate.env  multistate.env.example
events/: get-tenant.json
infra/oidc/: ecr-describe-prod-policy.json  ecr-push-policy.json  trust-policy-build.json  trust-policy-prod.json
loadtests/: multistate-api-p99.js
manifests/: 00-namespace.yaml  10-multistate-api.deployment.yaml  20-multistate-api.service.yaml  30-multistate-api.configmap.yaml  40-multistate-api.secret.yaml  50-multistate-api.hpa.yaml  60-multistate-api.ingress.yaml
manifests/observability/: 00-observability-namespace.yaml  LABELS.md  grafana-tempo-loki-datasources.yaml  multistate-api-alertmanagerconfig.yaml  multistate-api-dashboard-configmap.yaml  multistate-api-deployment-patch.yaml  multistate-api-prometheusrule.yaml  multistate-api-servicemonitor.yaml  otel-collector-values.yaml
manifests/observability/helm/: kube-prometheus-stack-local.yaml  loki-stack-local.yaml  otel-collector-values.yaml  tempo-local.yaml
multistate-agent-svc/: .env.example  .gitignore  Dockerfile  PROMPT_JOURNAL.md  README.md  RUNBOOK.md  pyproject.toml
multistate-agent-svc/argo-apps/: multistate-agent-svc.yaml
multistate-agent-svc/cfn/: agent-svc-budget.yaml
multistate-agent-svc/evals/: __init__.py  last_run.json  scenarios.jsonl  trajectory.py
multistate-agent-svc/scripts/: smoke_checkpoint.py
multistate-agent-svc/src/multistate_agent_svc/: __init__.py  app.py  budgets.py  graph.py  settings.py  sse.py  state.py
multistate-agent-svc/src/multistate_agent_svc/nodes/: __init__.py  _deadline.py  api.py  retrieval.py  synthesis.py
multistate-agent-svc/src/multistate_agent_svc/scripts/: __init__.py  eval.py
multistate-agent-svc/tests/: conftest.py  test_budget_guard.py  test_checkpointer_resume.py  test_deadline.py  test_graph_compile.py  test_recursion_limit.py  test_supervisor.py  test_synthesis_refusal.py  test_trajectory_eval.py
multistate-ai/: .env.example  .gitignore  PROMPT_JOURNAL.md  PYTHON.md  pyproject.toml
multistate-ai/docs/ragas/: w7d3.md
multistate-ai/sql/: V001__doc_chunks.sql  V002__rag2_metadata_and_partial_indexes.sql
multistate-ai/src/multistate_ai/: __init__.py  cache.py  chunker.py  cli.py  client.py  corpus.py  embedder.py  hybrid.py  loader.py  models.py  pgvector_loader.py  rag.py  ragas_shims.py  rerank.py  settings.py  value_types.py
multistate-ai/src/multistate_ai/dags/: __init__.py  rag_svc_ingest.py
multistate-ai/src/multistate_ai/scripts/: __init__.py  assert_langsmith_run_visible.py
multistate-ai/tests/: conftest.py  ddl_util.py  test_chunker.py  test_cli.py  test_client.py  test_corpus.py  test_great_expectations_suite.py  test_hybrid_rrf.py  test_models.py  test_pgvector_loader.py  test_rag_traceable.py  test_ragas_gate.py  test_ragas_thresholds.py  test_rerank.py  test_retrieve_and_generate.py  test_semantic_cache.py  test_settings.py  test_tenant_isolation.py  test_value_types.py
multistate-ai/tests/fixtures/: corpus_seed.jsonl  sample_request.json  tenant_java.json
multistate-ai/tests/golden/: multistate_golden_50.jsonl
multistate-api/: COST.md  INFRA.md  SRE-CAPSTONE.md
multistate-mcp-server/: .env.example  .gitignore  Dockerfile  PROMPT_JOURNAL.md  README.md  mcp.json  pyproject.toml
multistate-mcp-server/configs/: README.md  claude_desktop_config.json
multistate-mcp-server/src/multistate_mcp_server/: __init__.py  app.py  auth.py  dto.py  rag_adapter.py  settings.py  telemetry.py
multistate-mcp-server/src/multistate_mcp_server/scripts/: __init__.py  replay.py
multistate-mcp-server/src/multistate_mcp_server/tools/: __init__.py  _errors.py  _resources.py  llm.py  orders.py  rag.py
multistate-mcp-server/src/multistate_mcp_server/transports/: __init__.py  sse.py  stdio.py
multistate-mcp-server/tests/: __init__.py  test_e2e_mcp_to_spring.py  test_schemas.py  test_smoke_stdio.py  test_tool_descriptions.py
multistate-mcp-server/tests/fixtures/: replay_baseline.json  tools.json
multistate-web/: PROMPT_JOURNAL.md  README.md  codegen.ts  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
multistate-web/e2e/: global-setup.ts  tenant-chat.spec.ts
multistate-web/public/mocks/: tenant.json
multistate-web/server/: index.ts
multistate-web/server/api/: chat-tools.ts  chat.ts
multistate-web/src/: App.tsx  main.tsx  router.tsx
otelcol/: config.yaml
scratch/: loadtest-author-output.k6.js
scripts/: argocd-bootstrap.sh  dev.md  k3d-import-images.sh  k8s-smoke.sh  k8s-up.sh  llm-cost-spike.sh  observability-apply.sh  observability-plg-install.sh  observability-smoke.sh  sam-cold-warm.sh  sam-deploy.sh  sam-smoke.sh  sam-verify-task3.sh  sam-verify.sh  smoke.sh  spike-runner.sh
slo/: multistate-api.sloth.yaml
(+147 files in other folders)
