# multistate-agent-svc/pyproject.toml
# New uv project at the repo root; depends on the W7 D4 MCP server
# as an MCP client and the W7 D3 sidecar (multistate-ai) as a path
# dependency. Path deps use [tool.uv.sources] (relative, CI-safe)
# matching the W7 D4 multistate-mcp-server pattern.

[project]
name = "multistate-agent-svc"
version = "0.1.0"
description = "agent-svc: three-node LangGraph (retrieval, api, synthesis) wrapping multistate-mcp-server + multistate-ai; streams SSE to the W4 D4 React useChat hook."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "httpx>=0.27",
    "anthropic>=0.34",
    "instructor>=1.4",
    "mcp>=1.2",
    "langgraph>=0.2.40",
    "langgraph-checkpoint-postgres>=2.0",
    "psycopg[binary,pool]>=3.2",
    "langsmith>=0.1.80",
    "structlog>=24.1",
    "tenacity>=8.3",
    "ragas>=0.2",
    "multistate-ai",
    "multistate-mcp-server",
]

[tool.uv.sources]
multistate-ai = { path = "../multistate-ai" }
multistate-mcp-server = { path = "../multistate-mcp-server" }

[project.scripts]
multistate-agent-svc = "multistate_agent_svc.app:run"

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.5",
    "respx>=0.21",
    "testcontainers[postgres]>=4.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/multistate_agent_svc"]

[tool.mypy]
strict = true
python_version = "3.12"
disallow_any_explicit = false
warn_return_any = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "testcontainers.*",
    "multistate_ai.*",
    "multistate_mcp_server.*",
    "instructor.*",
    "ragas.*",
    "langgraph.*",
    "langgraph_checkpoint_postgres.*",
    "evals.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "multistate_agent_svc.nodes.api",
    "multistate_agent_svc.nodes.retrieval",
    "multistate_agent_svc.nodes.synthesis",
    "multistate_agent_svc.app",
    "multistate_agent_svc.sse",
    "multistate_agent_svc.graph",
    "evals.trajectory",
]
disallow_untyped_calls = false
disallow_untyped_decorators = false
warn_return_any = false
ignore_errors = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I", "RUF", "T20"]

[tool.ruff.lint.per-file-ignores]
"src/multistate_agent_svc/scripts/*.py" = ["T20"]
"tests/**" = ["T20"]
"evals/**" = ["T20"]
"scripts/**" = ["T20"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers --strict-config"
testpaths = ["tests"]
asyncio_mode = "auto"
