# multistate-ai/pyproject.toml
[project]
name = "multistate-ai"
version = "0.1.0"
description = "Python sidecar for multistate-api - nexus review via the W3 D1 LLM proxy."
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "httpx>=0.27",
    "tenacity>=8.3",
    "numpy>=2.0",
    "pandas>=2.2",
    "sentence-transformers>=3.0",
    "psycopg[binary]>=3.2",
    "pgvector>=0.3",
    "langsmith>=0.1.80",
]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.5",
    "respx>=0.21",
    "ragas>=0.1.10",
    "great-expectations>=0.18",
    "testcontainers[postgres]>=4.7",
    "pandas-stubs>=2.2",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/multistate_ai"]

[tool.mypy]
strict = true
python_version = "3.12"
disallow_any_explicit = true
warn_return_any = true
warn_unused_ignores = true
exclude = ["build/", "dist/"]

[[tool.mypy.overrides]]
module = [
    "testcontainers.*",
    "sentence_transformers.*",
    "pgvector.*",
    "ragas",
    "ragas.*",
    "datasets",
    "datasets.*",
    "great_expectations",
    "great_expectations.*",
]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
# E,F default; UP for pyupgrade; B for bugbear; SIM for simplify; I for isort.
select = ["E", "F", "UP", "B", "SIM", "I", "RUF", "T20"]
# T20 bans print() so library code stays log-only; CLI entrypoint opts in.

[tool.ruff.lint.per-file-ignores]
"src/multistate_ai/cli.py" = ["T20"]  # CLI is allowed to print()
"src/multistate_ai/scripts/*.py" = ["T20"]  # scripts are CLI-style entrypoints

[tool.pytest.ini_options]
addopts = "-ra --strict-markers --strict-config"
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: optional LLM / SaaS-backed gates (RAGAS, LangSmith); opt out with -m 'not slow'",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "src/multistate_ai/scripts/*",
]

[tool.coverage.report]
omit = [
    "src/multistate_ai/scripts/*",
]
