# multistate-mcp-server/pyproject.toml
# New uv project at the repo root; imports the W7 D3 sidecar
# (multistate-ai) as a path dependency.

[project]
name = "multistate-mcp-server"
version = "0.1.0"
description = "MCP server publishing four tools (orders.* , llm.chat , rag.retrieve_and_generate)."
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.2",                       # FastMCP, stdio + SSE transports, McpError
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "httpx>=0.27",
    "tenacity>=8.3",
    "langsmith>=0.1.80",
    "structlog>=24.1",                # structured JSON logging on stderr
    "anthropic>=0.39",                # required by multistate_ai.rag at import time
    "pyjwt[crypto]>=2.8",             # SSE bearer JWT + JWKS validation
    "uvicorn>=0.30",                  # SSE HTTP transport
    # The W7 D3 sidecar as a path dependency (read-only library reuse):
    "multistate_ai @ {root:uri}/../multistate-ai",
]

[project.scripts]
multistate-mcp-server = "multistate_mcp_server.transports.stdio:main"
multistate-mcp-server-sse = "multistate_mcp_server.transports.sse:main"

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.5",
    "respx>=0.21",
    "testcontainers[postgres]>=4.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/multistate_mcp_server"]

[tool.mypy]
strict = true
python_version = "3.12"
disallow_any_explicit = true
warn_return_any = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "testcontainers.*",
    "multistate_ai.*",
]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I", "RUF", "T20"]

[tool.ruff.lint.per-file-ignores]
"src/multistate_mcp_server/transports/*.py" = ["T20"]
"src/multistate_mcp_server/scripts/*.py" = ["T20", "BLE001"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers --strict-config"
testpaths = ["tests"]
asyncio_mode = "auto"
